fix wrap in footer.css

--- a/client/src/styles/footer.css
+++ b/client/src/styles/footer.css
@@ -1,5 +1,6 @@
 footer {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   font-family: "Pontano sans", sans-serif;
   padding: 1rem 2rem;
